fixed the backfround image on the find us page

--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ footer {
 
 .map {
     background-color: limegreen;
-    background-image: url("/img/map.png");
+    background-image: url("../img/map.png");
 }
 
 .map h2 {
